--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
           
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/loopit.png" class="project__img" alt="" />
+                <img src="./assets/treact.png" class="project__img" alt="" />
                 <div class="project__description">
-                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h3 class="project__description--title">Template Provider Site</h3>
                   <h4 class="project__description--subtitle">
                     Html, Css, JavaScript, Github
                   </h4>
