all links and github repos, updated

--- a/index.html
+++ b/index.html
@@ -188,24 +188,23 @@
                 <div class="project__description">
                   <h3 class="project__description--title">Portfolio Website</h3>
                   <h4 class="project__description--subtitle">
-                    Html, Css, JavaScript, Github
+                    Html, Css, Github, Vercel
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Veniam in, expedita quas enim iure illum officia? Pariatur
-                    iusto non aperiam, atque corrupti necessitatibus ipsa, amet
-                    quas, dolorem cupiditate officia dolore!
+                  This is my Portfolio Website which you are currently visiting. 
+                  This project is made using HTML5 and plain CSS3.  Here, GitHub is used as version control
+                   and collaboration platform and Vercel is used as hosting platform for this project.
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://your github.com link"
+                      href="https://github.com/theAmrit07/Eportfolio"
                       target="_blank"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
-                      href="https://eportfolio-snowy.vercel.app/"
+                      href="https://portfolio-amrit.vercel.app/"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
@@ -221,24 +220,23 @@
                 <div class="project__description">
                   <h3 class="project__description--title">Template Provider Site</h3>
                   <h4 class="project__description--subtitle">
-                    Html, Css, JavaScript, Github
+                    Html, Css, JavaScript, Github, Vercel
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Veniam in, expedita quas enim iure illum officia? Pariatur
-                    iusto non aperiam, atque corrupti necessitatibus ipsa, amet
-                    quas, dolorem cupiditate officia dolore!
+                   This is a Template Provider Website, where you can find and use your ideal templates.
+                   This project is developed using HTML5 , CSS3 and Vanilla JavaScript. Here, GitHub is used as version control and collaboration 
+                   platform and Vercel is used as hosting platform for this project.
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://your github.com link"
+                      href="https://github.com/theAmrit07/treact-project"
                       target="_blank"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
-                      href="https://your website.com link"
+                      href="https://treact-template.vercel.app/"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
@@ -253,24 +251,22 @@
                 <div class="project__description">
                   <h3 class="project__description--title">Ecommerce Website</h3>
                   <h4 class="project__description--subtitle">
-                    Html, Css, JavaScript, Github
+                    Html, Css, JavaScript, Github, Vercel
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Veniam in, expedita quas enim iure illum officia? Pariatur
-                    iusto non aperiam, atque corrupti necessitatibus ipsa, amet
-                    quas, dolorem cupiditate officia dolore!
+                    This is an Ecommerce Website. This project is developed using HTML5, CSS3 and Vanilla JavaScript.
+                    Here, GitHub is used as version control and collaboration platform and Vercel is used as hosting platform for this project.
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://your github.com link"
+                      href="https://github.com/theAmrit07/ecommerce-site"
                       target="_blank"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
-                      href="https://your website.com link"
+                      href="https://site-ecom.vercel.app/#"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
@@ -285,17 +281,17 @@
                 <div class="project__description">
                   <h3 class="project__description--title">Travel Agency Website</h3>
                   <h4 class="project__description--subtitle">
-                    Html, Css, JavaScript, Github
+                    Html, Css, JavaScript, Github, Vercel
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Veniam in, expedita quas enim iure illum officia? Pariatur
-                    iusto non aperiam, atque corrupti necessitatibus ipsa, amet
-                    quas, dolorem cupiditate officia dolore!
+                 This is a Travel Agency Website called "GHUMANTEY". This project was developed with collaboration
+                 with my mates. This website have many features which you can visit via below links. We used HTML5, CSS3 and Vanilla Javascript in this project.
+                 Here, GitHub is used as version control and collaboration platform and also used as hosting platform for this project.
+                  
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://theamrit07.github.io/travel-agency/"
+                      href="https://github.com/theAmrit07/travel-agency"
                       target="_blank"
                       class="project__description--link"
                     >
