--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
        
           
           <a
-            href="./assets/Example Resumepiy.pdf"
+            href="./assets/amritResume.pdf"
             class="footer__social--link link__hover--effect link__hover--effect--white"
             target="_blank"
             download
