new project details loveCalculator added

--- a/index.html
+++ b/index.html
@@ -307,6 +307,37 @@
                 </div>
               </div>
             </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./assets/loveCalculator.png" class="project__img" alt="" />
+                <div class="project__description">
+                  <h3 class="project__description--title">Love Calculator</h3>
+                  <h4 class="project__description--subtitle">
+                    Html, Css, JavaScript, Github, Vercel
+                  </h4>
+                  <p class="project__description--para">
+                  This is Made-For-Fun project. This Love Calculator is developed using HTML5, CSS3 and Vanilla JavaScript.
+                   This works on basis of a simple logic in javascript. Have fun using this.
+                  
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/theAmrit07/LoveCalculator"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a
+                      href="https://love-calculator-blush.vercel.app/"
+                      class="project__description--link"
+                    >
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
