--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <a href="mailto:goto.piyush07@outlook.com" class="about-me__link">
               <i class="far fa-envelope"></i>
             </a>
-            <a href="./assets/Example Resumepiy.pdf" target="_blank" class="about-me__link">
+            <a href="./assets/amritResume.pdf" target="_blank" class="about-me__link">
               <i class="fas fa-file-pdf"></i>
             </a>
           </div>
