resume updatedd on footer

--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@ number of images they want then AI will create images based on the user prompt.
        
           
           <a
-            href="./assets/amritResume.pdf"
+            href="./assets/ResumeCv.pdf"
             class="footer__social--link link__hover--effect link__hover--effect--white"
             target="_blank"
             download
