--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               <div class="project__wrapper">
                 <img src="./assets/musico.png" class="project__img" alt="" />
                 <div class="project__description">
-                  <h3 class="project__description--title">Musico-Your Music Buddy</h3>
+                  <h3 class="project__description--title">Musico </h3>
                   <h4 class="project__description--subtitle">
                     Html, Css, JavaScript, Github, Vercel
                   </h4>
