icon issue resolved

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amrit Chataut</title>
     <link rel="stylesheet" href="./style.css" />
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
+    <script src="https://kit.fontawesome.com/54715ef8f8.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <section id="about me"></section>
